@@ -144,6 +144,7 @@ JERROR_INVALID_CONTROLLER_CLASS="Invalid controller class"
 JERROR_LOADFILE_FAILED="Error loading form file"
 JERROR_LOADING_MENUS="Error loading Menus: %s"
 JERROR_LOGIN_DENIED="You do not have access to the administrator section of this site."
+JERROR_MAGIC_QUOTES="Your host needs to disable magic_quotes_gpc to run this version of Joomla!"
 JERROR_NO_ITEMS_SELECTED="No item(s) selected."
 JERROR_NOLOGIN_BLOCKED="Login denied! Your account has either been blocked or you have not activated it yet."
 JERROR_SAVE_FAILED="Could not save data. Error: %s"
