@@ -27,6 +27,9 @@ $ -> Language fix or change
 
 ; Below is merged into v3.1.2
 
+21-Jul-2013 Jean-Marie Simonet
+ + [#31349] Display Error Message when Magic Quotes is Enabled. Thanks Brian Teeman
+
 20-Jul-2013 Jean-Marie Simonet
  # [#31496] DEBUG_BACKTRACE_IGNORE_ARGS not supported in PHP 5.3.1-5.3.5. Thanks Beat
  # [#31533] User Interface allows tags in Banner Categories but it should not. Thanks Elin waring
